--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     
 </head>
 <body>
-    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-        <ul class="nav col-12 col-md-auto mb-2 mb-md-0 ms-5">
-            <li><a href="#" class="nav-link px-2 link-secondary font">Home</a></li>
-            <li><a href="#" class="nav-link px-2 font">Wiki</a></li>
-            <li><a href="#" class="nav-link px-2 font">Shop</a></li>
-            <li><a href="#" class="nav-link px-2 font">Discord</a></li>
+    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom bg-dark">
+        <ul class="nav col-12 col-md-auto mb-2 mb-md-0 mx-5">
+            <li><a href="#" class="nav-link text-white px-2 link-secondary font">Home</a></li>
+            <li><a href="https://rawmc.fandom.com/es/wiki/Wiki_RAW" target="_blank" class="nav-link text-white px-2 link-secondary font">Wiki</a></li>
+            <li><a href="https://rawmc.tebex.io" target="_blank" class="nav-link text-white px-2 link-secondary font">Shop</a></li>
+            <li><a href="https://discord.gg/mVeDVkxPzY" target="_blank" class="nav-link text-white px-2 link-secondary font">Discord</a></li>
         </ul>
 
         <div class="col-md-3 mb-2 mb-md-0 justify-content-center">
@@ -29,8 +29,8 @@
         </div>
 
         <div class="col-md-3 text-end me-5">
-            <button type="button" class="btn btn-outline-primary me-2 font">Login</button>
-            <button type="button" class="btn btn-primary font">Sign-up</button>
+            <button type="button" class="btn text-white btn-outline-primary me-2 font">Login</button>
+            <button type="button" class="btn text-white btn-primary font">Sign-up</button>
         </div>
     </header>
 </body>
