--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <!-- Estilos CSS -->
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap-icons-1.11.3/font/bootstrap-icons.min.css">
     
 </head>
 <body>
+    <!--Encabezado-->
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom bg-dark">
         <ul class="nav col-12 col-md-auto mb-2 mb-md-0 mx-5">
             <li><a href="#" class="nav-link text-white px-2 link-secondary font">Home</a></li>
@@ -33,5 +35,21 @@
             <button type="button" class="btn text-white btn-primary font">Sign-up</button>
         </div>
     </header>
+
+    <!--Pie de pagina-->
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top bg-dark">
+        <div class="col-md-4 d-flex align-items-center">
+            <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+                <img src="img/Eclipse_Estudios.png" class="rounded mx-auto d-block" width="35">
+            </a>
+            <span class="mb-3 mb-md-0 text-white">© 2024 Eclipse Estudios</span>
+        </div>
+    
+        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex me-5">
+            <li class="ms-3"><a class="text-body-emphasis" target="_blank" href="https://www.tiktok.com/@raw.changelog"><i class="bi text-white bi-tiktok"></i></use></svg></a></li>
+            <li class="ms-3"><a class="text-body-emphasis" target="_blank" href="https://www.instagram.com/rawmc.xyz/"><i class="bi text-white bi-instagram"></i></use></svg></a></li>
+            <li class="ms-3"><a class="text-body-emphasis" target="_blank" href="https://www.youtube.com/@rawmc.xyz"><i class="bi text-white bi-youtube"></i></use></svg></a></li>
+        </ul>
+    </footer>
 </body>
 </html>
