--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 <body>
     <!--Encabezado-->
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 border-bottom bg-dark">
-        <ul class="nav col-12 col-md-auto mb-2 mb-md-0 ms-3 me-5">
+        <ul class="nav col-12 col-md-auto ms-3 me-5">
             <li><a href="index.html" class="nav-link text-white px-2 link-secondary font">Home</a></li>
             <li><a href="https://rawmc.fandom.com/es/wiki/Wiki_RAW" target="_blank" class="nav-link text-white px-2 link-secondary font">Wiki</a></li>
             <li><a href="https://rawmc.tebex.io" target="_blank" class="nav-link text-white px-2 link-secondary font">Shop</a></li>
             <li><a href="https://discord.gg/mVeDVkxPzY" target="_blank" class="nav-link text-white px-2 link-secondary font">Discord</a></li>
         </ul>
 
-        <div class="col-md-3 mb-2 mb-md-0 justify-content-center">
-            <img src="img/raw.png" class="rounded mx-auto d-block me-5" width="200">
+        <div class=" ms-5">
+            <img src="img/raw.png" class="rounded d-block" width="200">
         </div>
 
         <div class="col-md-3 text-end me-4">
