--- a/home.html
+++ b/home.html
@@ -17,23 +17,24 @@
 </head>
 <body>
     <!--Encabezado-->
-    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 border-bottom bg-dark">
-        <ul class="nav col-12 col-md-auto ms-3">
-            <li><a href="index.html" class="nav-link text-white px-2 link-secondary font">Home</a></li>
-            <li><a href="https://rawmc.fandom.com/es/wiki/Wiki_RAW" target="_blank" class="nav-link text-white px-2 link-secondary font">Wiki</a></li>
-            <li><a href="https://rawmc.tebex.io" target="_blank" class="nav-link text-white px-2 link-secondary font">Shop</a></li>
-            <li><a href="https://discord.gg/mVeDVkxPzY" target="_blank" class="nav-link text-white px-2 link-secondary font">Discord</a></li>
-        </ul>
-
-        <div class="ms-5">
-            <img src="img/raw.png" class="rounded d-block" width="200">
+    <header class="d-flex flex-wrap align-items-center justify-content-md-between py-3 border-bottom bg-dark">
+        <div class="nav col-md-4 d-flex align-items-center">
+            <img src="img/raw.png" class="nav ms-4" width="130">
+            <ul class="nav mb-3 mb-md-0 text-white ms-4">
+                <li><a href="index.html" class="nav-link text-white px-2 link-secondary font">Home</a></li>
+                <li><a href="index.html" class="nav-link text-white px-2 link-secondary font">Wiki</a></li>
+                <li><a href="index.html" class="nav-link text-white px-2 link-secondary font">Shop</a></li>
+                <li><a href="index.html" class="nav-link text-white px-2 link-secondary font">Discord</a></li>
+            </ul>
         </div>
 
-            <ul class="col-2 nav justify-content-end list-unstyled mx-5">
-                <li class="ms-3"><a class="text-body-emphasis" href="#"><i class="bi text-white bi-person-circle"> UserName</i></use></svg></a></li>
-            </ul>
-    </header>   
-
+        <ul class="nav mb-3 mb-md-0 text-white me-3">
+            <li><a class="nav-link text-white px-2 font">Username</a></li>
+            <h4>|</h4>
+            <li><a href="index.html" class="nav-link text-white px-2 link-secondary font">Logout</a></li>
+        </ul>
+    </header>
+    
     <!--Cuerpo de la pagina-->
     <section>
 
