--- a/index.html
+++ b/index.html
@@ -17,21 +17,19 @@
 </head>
 <body>
     <!--Encabezado-->
-    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 border-bottom bg-dark">
-        <ul class="nav col-12 col-md-auto ms-3 me-5">
-            <li><a href="index.html" class="nav-link text-white px-2 link-secondary font">Home</a></li>
-            <li><a href="https://rawmc.fandom.com/es/wiki/Wiki_RAW" target="_blank" class="nav-link text-white px-2 link-secondary font">Wiki</a></li>
-            <li><a href="https://rawmc.tebex.io" target="_blank" class="nav-link text-white px-2 link-secondary font">Shop</a></li>
-            <li><a href="https://discord.gg/mVeDVkxPzY" target="_blank" class="nav-link text-white px-2 link-secondary font">Discord</a></li>
-        </ul>
-
-        <div class=" ms-5">
-            <img src="img/raw.png" class="rounded d-block" width="200">
+    <header class="d-flex flex-wrap align-items-center justify-content-md-between py-3 border-bottom bg-dark">
+        <div class="nav col-md-4 d-flex align-items-center">
+            <img src="img/raw.png" class="nav ms-4" width="130">
+            <ul class="nav mb-3 mb-md-0 text-white ms-4">
+                <li><a href="index.html" class="nav-link text-white px-2 link-secondary font">Home</a></li>
+                <li><a href="index.html" class="nav-link text-white px-2 link-secondary font">Wiki</a></li>
+                <li><a href="index.html" class="nav-link text-white px-2 link-secondary font">Shop</a></li>
+                <li><a href="index.html" class="nav-link text-white px-2 link-secondary font">Discord</a></li>
+            </ul>
         </div>
 
-        <div class="col-md-3 text-end me-4">
+        <div class="col-md-3 text-end me-3">
             <a class="text-body-emphasis" href="login.html"><button type="button" class="btn text-white btn-outline-primary me-2 font">Login</button></a>
-            <button type="button" class="btn text-white btn-primary font">Sign-up</button>
         </div>
     </header>
     
