--- a/login.html
+++ b/login.html
@@ -17,26 +17,22 @@
 </head>
 <body>
     <!--Encabezado-->
-    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 border-bottom bg-dark">
-        <ul class="nav col-12 col-md-auto mb-2 mb-md-0 ms-2">
-            <li><a href="index.html" class="nav-link text-white px-2 link-secondary font">Home</a></li>
-            <li><a href="https://rawmc.fandom.com/es/wiki/Wiki_RAW" target="_blank" class="nav-link text-white px-2 link-secondary font">Wiki</a></li>
-            <li><a href="https://rawmc.tebex.io" target="_blank" class="nav-link text-white px-2 link-secondary font">Shop</a></li>
-            <li><a href="https://discord.gg/mVeDVkxPzY" target="_blank" class="nav-link text-white px-2 link-secondary font">Discord</a></li>
-        </ul>
-
-        <div class="col-md-3 mb-2 mb-md-0 justify-content-center">
-            <img src="img/raw.png" class="rounded mx-auto d-block" width="200">
-        </div>
-
-        <div class="col-md-2 text-end me-4">
-            <button type="button" class="btn text-white btn-primary font">Sign-up</button>
+    <header class="d-flex flex-wrap align-items-center justify-content-md-between py-3 border-bottom bg-dark">
+        <div class="nav col-md-4 d-flex align-items-center">
+            <img src="img/raw.png" class="nav ms-4" width="130">
+            <ul class="nav mb-3 mb-md-0 text-white ms-4">
+                <li><a href="index.html" class="nav-link text-white px-2 link-secondary font">Home</a></li>
+                <li><a href="index.html" class="nav-link text-white px-2 link-secondary font">Wiki</a></li>
+                <li><a href="index.html" class="nav-link text-white px-2 link-secondary font">Shop</a></li>
+                <li><a href="index.html" class="nav-link text-white px-2 link-secondary font">Discord</a></li>
+            </ul>
         </div>
     </header>
+
     
     <!--Cuerpo de la pagina-->
     <section>
-        <div class="img-airport">
+        <div class="img-airport bg-image">
             <div class="d-flex justify-content-center align-items-center">
                 <div class="col-12 col-md-8 col-lg-5 col-xl-6 my-5">
                     <div class="card bg-dark text-white mt-5" style="border-radius: 1rem;">
