--- a/home.html
+++ b/home.html
@@ -37,7 +37,9 @@
     
     <!--Cuerpo de la pagina-->
     <section>
-
+        <div class="img-airport bg-image">
+            
+        </div>
     </section>
 
     <!--Pie de pagina-->
