--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     
     <!--Cuerpo de la pagina-->
     <section>
-
+        <div class="img-airport bg-image">
+            
+        </div>
     </section>
 
     <!--Pie de pagina-->
