--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Titulo-->
-    <title>RAW</title>
+    <title>Home RAW</title>
     <!--Icono-->
     <link rel="icon" href="img/RAW_icon_x64.png">
     <!-- Bootstrap CSS -->
