--- a/home.html
+++ b/home.html
@@ -21,15 +21,15 @@
         <div class="nav col-md-4 d-flex align-items-center">
             <img src="img/raw.png" class="nav ms-4" width="130">
             <ul class="nav mb-3 mb-md-0 text-white ms-4">
-                <li><a href="index.html" class="nav-link text-white px-2 link-secondary font">Home</a></li>
+                <li><a href="home.html" class="nav-link text-white px-2 link-secondary font">Home</a></li>
                 <li><a href="https://rawmc.fandom.com/es/wiki/Wiki_RAW" target="_blank" class="nav-link text-white px-2 link-secondary font">Wiki</a></li>
-                <li><a href="https://rawmc.tebex.io" target="_blank" class="nav-link text-white px-2 link-secondary font">Shop</a></li>
+                <li><a href="shop.html" class="nav-link text-white px-2 link-secondary font">Shop</a></li>
                 <li><a href="https://discord.gg/8eJvT2HNFq" target="_blank" class="nav-link text-white px-2 link-secondary font">Discord</a></li>
             </ul>
         </div>
 
         <ul class="nav mb-3 mb-md-0 text-white me-3">
-            <li><a class="nav-link text-white px-2 font">Username</a></li>
+            <li><a class="nav-link px-2 font" style="color: aqua;">Username</a></li>
             <h4>|</h4>
             <li><a href="index.html" class="nav-link text-white px-2 link-secondary font">Logout</a></li>
         </ul>
@@ -54,7 +54,7 @@
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex me-4">
             <li class="ms-3"><a class="text-body-emphasis" target="_blank" href="https://www.tiktok.com/@raw.changelog"><i class="bi text-white bi-tiktok"></i></use></svg></a></li>
             <li class="ms-3"><a class="text-body-emphasis" target="_blank" href="https://www.instagram.com/rawmc.xyz/"><i class="bi text-white bi-instagram"></i></use></svg></a></li>
-            <li class="ms-3"><a class="text-body-emphasis" target="_blank" href="https://www.youtube.com/@rawmc.xyz"><i class="bi text-white bi-youtube"></i></use></svg></a></li>
+            <li class="ms-3"><a class="text-body-emphasis" target="_blank" href="https://www.youtube.com/@rawmc.xyz."><i class="bi text-white bi-youtube"></i></use></svg></a></li>
         </ul>
     </footer>
 </body>
