--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="col-md-3 text-end me-3">
-            <a class="text-body-emphasis" href="login.html"><button type="button" class="btn text-white btn-outline-primary me-2 font">Login</button></a>
+            <a class="text-body-emphasis" href="login.html"><button type="button" class="btn text-white btn-outline-secondary me-2 font">Login</button></a>
         </div>
     </header>
     
@@ -52,7 +52,7 @@
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex me-4">
             <li class="ms-3"><a class="text-body-emphasis" target="_blank" href="https://www.tiktok.com/@raw.changelog"><i class="bi text-white bi-tiktok"></i></use></svg></a></li>
             <li class="ms-3"><a class="text-body-emphasis" target="_blank" href="https://www.instagram.com/rawmc.xyz/"><i class="bi text-white bi-instagram"></i></use></svg></a></li>
-            <li class="ms-3"><a class="text-body-emphasis" target="_blank" href="https://www.youtube.com/@rawmc.xyz"><i class="bi text-white bi-youtube"></i></use></svg></a></li>
+            <li class="ms-3"><a class="text-body-emphasis" target="_blank" href="https://www.youtube.com/@rawmc.xyz."><i class="bi text-white bi-youtube"></i></use></svg></a></li>
         </ul>
     </footer>
 </body>
