--- a/login.html
+++ b/login.html
@@ -46,7 +46,7 @@
                                     <input type="text" id="typeTextX" class="form-control form-control-lg font" placeholder="Nickname">
                                 <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 40px;"></div><div class="form-notch-trailing"></div></div></div>
 
-                                <a href="home.html" class="nav-link text-white px-2 link-secondary font"><button data-mdb-button-init="" data-mdb-ripple-init="" class="btn btn-outline-light btn-lg px-5" type="submit" data-mdb-button-initialized="true">Login</button></a>
+                                <a href="home.html" class="nav-link text-white px-2 link-secondary font"><button data-mdb-button-init="" data-mdb-ripple-init="" class="btn btn-outline-secondary text-white btn-lg px-5" type="submit" data-mdb-button-initialized="true">Login</button></a>
                             </div>
                         </div>
                     </div>
@@ -67,7 +67,7 @@
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex me-4">
             <li class="ms-3"><a class="text-body-emphasis" target="_blank" href="https://www.tiktok.com/@raw.changelog"><i class="bi text-white bi-tiktok"></i></use></svg></a></li>
             <li class="ms-3"><a class="text-body-emphasis" target="_blank" href="https://www.instagram.com/rawmc.xyz/"><i class="bi text-white bi-instagram"></i></use></svg></a></li>
-            <li class="ms-3"><a class="text-body-emphasis" target="_blank" href="https://www.youtube.com/@rawmc.xyz"><i class="bi text-white bi-youtube"></i></use></svg></a></li>
+            <li class="ms-3"><a class="text-body-emphasis" target="_blank" href="https://www.youtube.com/@rawmc.xyz."><i class="bi text-white bi-youtube"></i></use></svg></a></li>
         </ul>
     </footer>
 </body>
