--- a/shop.html
+++ b/shop.html
@@ -95,7 +95,7 @@
     <!--Pie de pagina-->
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top bg-dark">
         <div class="col-md-4 d-flex align-items-center ms-3">
-            <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
                 <img src="img/Eclipse_Estudios.png" class="rounded mx-auto d-block" width="35">
             </a>
             <span class="mb-3 mb-md-0 text-white">© 2024 Eclipse Estudios</span>
