shop+ login+ links

--- a/shop_unlogin.html
+++ b/shop_unlogin.html
@@ -21,18 +21,16 @@
         <div class="nav col-md-4 d-flex align-items-center">
             <img src="img/raw.png" class="nav ms-4" width="130">
             <ul class="nav mb-3 mb-md-0 text-white ms-4">
-                <li><a href="home.html" class="nav-link text-white px-2 link-secondary font">Inicio</a></li>
+                <li><a href="index.html" class="nav-link text-white px-2 link-secondary font">Inicio</a></li>
                 <li><a href="https://rawmc.fandom.com/es/wiki/Wiki_RAW" target="_blank" class="nav-link text-white px-2 link-secondary font">Wiki</a></li>
                 <li><a href="shop.html" class="nav-link text-white px-2 link-secondary font">Tienda</a></li>
                 <li><a href="https://discord.gg/8eJvT2HNFq" target="_blank" class="nav-link text-white px-2 link-secondary font">Discord</a></li>
             </ul>
         </div>
 
-        <ul class="nav mb-3 mb-md-0 text-white me-3">
-            <li><a class="nav-link px-2 font" style="color: aqua;">Username</a></li>
-            <h4>|</h4>
-            <li><a href="index.html" class="nav-link text-white px-2 link-secondary font">Logout</a></li>
-        </ul>
+        <div class="col-md-3 text-end me-3">
+            <a class="text-body-emphasis" href="login.html"><button type="button" class="btn text-white btn-outline-secondary me-2 font">Login</button></a>
+        </div>
     </header>
     
     <!--Cuerpo de la pagina-->
@@ -68,7 +66,7 @@
                                         <h6 class="font" style="color: red;">MERCENARIO [30 DIAS]</h6>
                                         <h5 class="font">$4.50 USD</h5>
                                         <div class="justify-content-center">
-                                            <a class="text-body-emphasis" href="https://rawmc.tebex.io/category/rangos-temporales#"><button type="button" class="btn text-white btn-outline-info font">Comprar</button></a>
+                                            <a class="text-body-emphasis" href="login_shop_unlogin.html"><button type="button" class="btn text-white btn-outline-info font">Comprar</button></a>
                                         </div>
                                     </div>
                                 </div>
@@ -78,7 +76,7 @@
                                         <h6 class="font" style="color: aquamarine;">VETERANO [30 DIAS]</h6>
                                         <h5 class="font">$4.50 USD</h5>
                                         <div class="justify-content-center">
-                                            <a class="text-body-emphasis" href="https://rawmc.tebex.io/category/rangos-temporales#"><button type="button" class="btn text-white btn-outline-info font">Comprar</button></a>
+                                            <a class="text-body-emphasis" href="login_shop_unlogin.html"><button type="button" class="btn text-white btn-outline-info font">Comprar</button></a>
                                         </div>
                                     </div>
                                 </div>
@@ -95,7 +93,7 @@
                                         <h6 class="font" style="color: red;">MERCENARIO [PERMANENTE]</h6>
                                         <h5 class="font">$10.59 USD</h5>
                                         <div class="justify-content-center">
-                                            <a class="text-body-emphasis" href="https://rawmc.tebex.io/category/rangos-permanentes"><button type="button" class="btn text-white btn-outline-info font">Comprar</button></a>
+                                            <a class="text-body-emphasis" href="login_shop_unlogin.html"><button type="button" class="btn text-white btn-outline-info font">Comprar</button></a>
                                         </div>
                                     </div>
                                 </div>
