--- a/login.html
+++ b/login.html
@@ -21,9 +21,9 @@
         <div class="nav col-md-4 d-flex align-items-center">
             <img src="img/raw.png" class="nav ms-4" width="130">
             <ul class="nav mb-3 mb-md-0 text-white ms-4">
-                <li><a href="index.html" class="nav-link text-white px-2 link-secondary font">Home</a></li>
+                <li><a href="index.html" class="nav-link text-white px-2 link-secondary font">Inicio</a></li>
                 <li><a href="https://rawmc.fandom.com/es/wiki/Wiki_RAW" target="_blank" class="nav-link text-white px-2 link-secondary font">Wiki</a></li>
-                <li><a href="https://rawmc.tebex.io" target="_blank" class="nav-link text-white px-2 link-secondary font">Shop</a></li>
+                <li><a href="https://rawmc.tebex.io" target="_blank" class="nav-link text-white px-2 link-secondary font">Tienda</a></li>
                 <li><a href="https://discord.gg/8eJvT2HNFq" target="_blank" class="nav-link text-white px-2 link-secondary font">Discord</a></li>
             </ul>
         </div>
