--- a/login.html
+++ b/login.html
@@ -61,7 +61,7 @@
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
                 <img src="img/Eclipse_Estudios.png" class="rounded mx-auto d-block" width="35">
             </a>
-            <span class="mb-3 mb-md-0 text-white">© 2024 Eclipse Estudios</span>
+            <span class="mb-3 mb-md-0 text-white">© 2024 RAWMC for Eclipse Estudios</span>
         </div>
     
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex me-4">
