--- a/login.html
+++ b/login.html
@@ -21,10 +21,10 @@
         <div class="nav col-md-4 d-flex align-items-center">
             <img src="img/raw.png" class="nav ms-4" width="130">
             <ul class="nav mb-3 mb-md-0 text-white ms-4">
-                <li><a href="index.html" class="nav-link text-white px-2 link-secondary font">Inicio</a></li>
-                <li><a href="https://rawmc.fandom.com/es/wiki/Wiki_RAW" target="_blank" class="nav-link text-white px-2 link-secondary font">Wiki</a></li>
-                <li><a href="https://rawmc.tebex.io" target="_blank" class="nav-link text-white px-2 link-secondary font">Tienda</a></li>
-                <li><a href="https://discord.gg/8eJvT2HNFq" target="_blank" class="nav-link text-white px-2 link-secondary font">Discord</a></li>
+                <li><a href="index.html" class="nav-link text-white px-2 link-info font">Inicio</a></li>
+                <li><a href="https://rawmc.fandom.com/es/wiki/Wiki_RAW" target="_blank" class="nav-link text-white px-2 link-info font">Wiki</a></li>
+                <li><a href="shop_unlogin.html" class="nav-link text-white px-2 link-info font">Tienda</a></li>
+                <li><a href="https://discord.gg/8eJvT2HNFq" target="_blank" class="nav-link text-white px-2 link-info font">Discord</a></li>
             </ul>
         </div>
     </header>
@@ -46,7 +46,7 @@
                                     <input type="text" id="typeTextX" class="form-control form-control-lg font" placeholder="Nickname">
                                 <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 40px;"></div><div class="form-notch-trailing"></div></div></div>
 
-                                <a href="home.html" class="nav-link text-white px-2 link-secondary font"><button data-mdb-button-init="" data-mdb-ripple-init="" class="btn btn-outline-secondary text-white btn-lg px-5" type="submit" data-mdb-button-initialized="true">Login</button></a>
+                                <a href="home.html" class="nav-link text-white px-2 link-info font"><button data-mdb-button-init="" data-mdb-ripple-init="" class="btn btn-outline-info text-white btn-lg px-5" type="submit" data-mdb-button-initialized="true">Login</button></a>
                             </div>
                         </div>
                     </div>
