--- a/shop_unlogin.html
+++ b/shop_unlogin.html
@@ -21,15 +21,15 @@
         <div class="nav col-md-4 d-flex align-items-center">
             <img src="img/raw.png" class="nav ms-4" width="130">
             <ul class="nav mb-3 mb-md-0 text-white ms-4">
-                <li><a href="index.html" class="nav-link text-white px-2 link-secondary font">Inicio</a></li>
-                <li><a href="https://rawmc.fandom.com/es/wiki/Wiki_RAW" target="_blank" class="nav-link text-white px-2 link-secondary font">Wiki</a></li>
-                <li><a href="shop.html" class="nav-link text-white px-2 link-secondary font">Tienda</a></li>
-                <li><a href="https://discord.gg/8eJvT2HNFq" target="_blank" class="nav-link text-white px-2 link-secondary font">Discord</a></li>
+                <li><a href="index.html" class="nav-link text-white px-2 link-info font">Inicio</a></li>
+                <li><a href="https://rawmc.fandom.com/es/wiki/Wiki_RAW" target="_blank" class="nav-link text-white px-2 link-info font">Wiki</a></li>
+                <li><a href="shop.html" class="nav-link text-white px-2 link-info font">Tienda</a></li>
+                <li><a href="https://discord.gg/8eJvT2HNFq" target="_blank" class="nav-link text-white px-2 link-info font">Discord</a></li>
             </ul>
         </div>
 
         <div class="col-md-3 text-end me-3">
-            <a class="text-body-emphasis" href="login.html"><button type="button" class="btn text-white btn-outline-secondary me-2 font">Login</button></a>
+            <a class="text-body-emphasis" href="login_shop_unlogin.html"><button type="button" class="btn text-white btn-outline-info me-2 font">Login</button></a>
         </div>
     </header>
     
