--- a/home.html
+++ b/home.html
@@ -21,17 +21,17 @@
         <div class="nav col-md-4 d-flex align-items-center">
             <img src="img/raw.png" class="nav ms-4" width="130">
             <ul class="nav mb-3 mb-md-0 text-white ms-4">
-                <li><a href="home.html" class="nav-link text-white px-2 link-secondary font">Inicio</a></li>
-                <li><a href="https://rawmc.fandom.com/es/wiki/Wiki_RAW" target="_blank" class="nav-link text-white px-2 link-secondary font">Wiki</a></li>
-                <li><a href="shop.html" class="nav-link text-white px-2 link-secondary font">Tienda</a></li>
-                <li><a href="https://discord.gg/8eJvT2HNFq" target="_blank" class="nav-link text-white px-2 link-secondary font">Discord</a></li>
+                <li><a href="home.html" class="nav-link text-white px-2 link-info font">Inicio</a></li>
+                <li><a href="https://rawmc.fandom.com/es/wiki/Wiki_RAW" target="_blank" class="nav-link text-white px-2 link-info font">Wiki</a></li>
+                <li><a href="shop.html" class="nav-link text-white px-2 link-info font">Tienda</a></li>
+                <li><a href="https://discord.gg/8eJvT2HNFq" target="_blank" class="nav-link text-white px-2 link-info font">Discord</a></li>
             </ul>
         </div>
 
         <ul class="nav mb-3 mb-md-0 text-white me-3">
             <li><a class="nav-link px-2 font" style="color: aqua;">Username</a></li>
             <h4>|</h4>
-            <li><a href="index.html" class="nav-link text-white px-2 link-secondary font">Logout</a></li>
+            <li><a href="index.html" class="nav-link text-white px-2 link-danger font">Logout</a></li>
         </ul>
     </header>
     
