--- a/home.html
+++ b/home.html
@@ -37,6 +37,7 @@
     
     <!--Cuerpo de la pagina-->
     <section>
+        <!--Fondo-->
         <div class="img-airport bg-image">
             
         </div>
