--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     
     <!--Cuerpo de la pagina-->
     <section>
+        <!--fondo-->
         <div class="img-airport bg-image">
             
         </div>
