--- a/shop.html
+++ b/shop.html
@@ -43,6 +43,7 @@
                     <div class="col-12">
                         <h2 class="text-white text-center" style="font-weight: 800;">TIENDA</h2>
                     </div>
+                    <!--INFO TIENDA-->
                     <div class="col-10 mx-auto mt-5 bg-dark" style="border-radius: 1rem;">
                         <div class="col-12 text-white font text-center">
                             <h3 class="mb-3 pt-4" style="color:aqua">IMPORTANTE!</h3>
@@ -58,6 +59,7 @@
                             </div>
                         </div>
                     </div>
+                    <!--PRODUCTOS-->
                     <div class="col-10 mx-auto mt-5 bg-dark" style="border-radius: 1rem;">
                         <div class="col-12 text-white font text-center">
                             <h3 class="mb-3 pt-4" style="color:greenyellow">RANGOS TEMPORALES</h3>
