--- a/shop_unlogin.html
+++ b/shop_unlogin.html
@@ -43,6 +43,7 @@
                     </div>
                     <div class="col-10 mx-auto mt-5 bg-dark" style="border-radius: 1rem;">
                         <div class="col-12 text-white font text-center">
+                            <!--Info web-->
                             <h3 class="mb-3 pt-4" style="color:aqua">IMPORTANTE!</h3>
                             <div class="d-flex">
                                 <div class="col-8 mx-auto mb-3 bg-black" style="border-radius: 1rem;">
@@ -56,6 +57,7 @@
                             </div>
                         </div>
                     </div>
+                    <!--PRODUCTOS-->
                     <div class="col-10 mx-auto mt-5 bg-dark" style="border-radius: 1rem;">
                         <div class="col-12 text-white font text-center">
                             <h3 class="mb-3 pt-4" style="color:greenyellow">RANGOS TEMPORALES</h3>
