--- a/shop_unlogin.html
+++ b/shop_unlogin.html
@@ -35,21 +35,21 @@
     
     <!--Cuerpo de la pagina-->
     <section>
-        <div class="">
+        <div class="img-airport bg-image">
             <div class="container row">
-                <div class="col-12 my-5 mx-5 justify-content-center">
+                <div class="col-12 my-3 mx-5 justify-content-center">
                     <div class="col-12">
                         <h2 class="text-white text-center" style="font-weight: 800;">TIENDA</h2>
                     </div>
-                    <div class="col-10 mx-auto mt-5 bg-dark" style="border-radius: 1rem;">
+                    <!--INFO TIENDA-->
+                    <div class="col-9 mx-auto mt-3 bg-dark" style="border-radius: 1rem;">
                         <div class="col-12 text-white font text-center">
-                            <!--Info web-->
                             <h3 class="mb-3 pt-4" style="color:aqua">IMPORTANTE!</h3>
                             <div class="d-flex">
                                 <div class="col-8 mx-auto mb-3 bg-black" style="border-radius: 1rem;">
                                     <div class="my-3">
                                         <p class="font text-white">Todas las compras realizadas en esta web, se realizan en: 
-                                            <a href="https://rawmc.tebex.io" target="_blank" class="nav-link px-2 link-white font" style="color:aqua">rawmc.tebex.io</a>
+                                            <a href="login_shop_unlogin.html" target="_blank" class="nav-link px-2 link-white font" style="color:aqua">rawmc.tebex.io</a>
                                             Por lo cual contamos con un ambiente seguro para realizar tus compras!
                                         </p>
                                     </div>
@@ -58,13 +58,13 @@
                         </div>
                     </div>
                     <!--PRODUCTOS-->
-                    <div class="col-10 mx-auto mt-5 bg-dark" style="border-radius: 1rem;">
+                    <div class="col-9 mx-auto mt-2 bg-dark" style="border-radius: 1rem;">
                         <div class="col-12 text-white font text-center">
                             <h3 class="mb-3 pt-4" style="color:greenyellow">RANGOS TEMPORALES</h3>
                             <div class="d-flex">
                                 <div class="col-5 mx-auto mb-3 bg-black" style="border-radius: 1rem;">
                                     <div class="my-3">
-                                        <img src="img/tebex.png" class="my-2" width="400">
+                                        <img src="img/tebex.png" class="my-2" width="200">
                                         <h6 class="font" style="color: red;">MERCENARIO [30 DIAS]</h6>
                                         <h5 class="font">$4.50 USD</h5>
                                         <div class="justify-content-center">
@@ -74,7 +74,7 @@
                                 </div>
                                 <div class="col-5 mx-auto mb-3 bg-black" style="border-radius: 1rem;">
                                     <div class="my-3">
-                                        <img src="img/tebex.png" class="my-2" width="400">
+                                        <img src="img/tebex.png" class="my-2" width="200">
                                         <h6 class="font" style="color: aquamarine;">VETERANO [30 DIAS]</h6>
                                         <h5 class="font">$4.50 USD</h5>
                                         <div class="justify-content-center">
@@ -85,17 +85,17 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-10 mx-auto mt-5 bg-dark" style="border-radius: 1rem;">
+                    <div class="col-9 mx-auto mt-2 bg-dark" style="border-radius: 1rem;">
                         <div class="col-12 text-white font text-center">
                             <h3 class="mb-3 pt-4" style="color:aqua">RANGOS PERMANENTES</h3>
                             <div class="d-flex">
                                 <div class="col-5 mx-auto mb-3 bg-black" style="border-radius: 1rem;">
                                     <div class="my-3">
-                                        <img src="img/tebex.png" class="my-2" width="400">
+                                        <img src="img/tebex.png" class="my-2" width="200">
                                         <h6 class="font" style="color: red;">MERCENARIO [PERMANENTE]</h6>
                                         <h5 class="font">$10.59 USD</h5>
                                         <div class="justify-content-center">
-                                            <a class="text-body-emphasis" href="login_shop_unlogin.html"><button type="button" class="btn text-white btn-outline-info font">Comprar</button></a>
+                                            <a class="text-body-emphasis" href="https://rawmc.tebex.io/category/rangos-permanentes"><button type="button" class="btn text-white btn-outline-info font">Comprar</button></a>
                                         </div>
                                     </div>
                                 </div>
@@ -113,13 +113,13 @@
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
                 <img src="img/Eclipse_Estudios.png" class="rounded mx-auto d-block" width="35">
             </a>
-            <span class="mb-3 mb-md-0 text-white">© 2024 RAWMC for Eclipse Estudios</span>
+            <span class="mb-3 mb-md-0" style="color:gray">© 2024 RAWMC for Eclipse Estudios</span>
         </div>
     
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex me-4">
-            <li class="ms-3"><a class="text-body-emphasis" target="_blank" href="https://www.tiktok.com/@raw.changelog"><i class="bi text-white bi-tiktok"></i></use></svg></a></li>
-            <li class="ms-3"><a class="text-body-emphasis" target="_blank" href="https://www.instagram.com/rawmc.xyz/"><i class="bi text-white bi-instagram"></i></use></svg></a></li>
-            <li class="ms-3"><a class="text-body-emphasis" target="_blank" href="https://www.youtube.com/@rawmc.xyz."><i class="bi text-white bi-youtube"></i></use></svg></a></li>
+            <li class="ms-3"><a class="text-body-emphasis" target="_blank" href="https://www.tiktok.com/@raw.changelog"><i class="bi bi-tiktok" style="color:gray"></i></use></svg></a></li>
+            <li class="ms-3"><a class="text-body-emphasis" target="_blank" href="https://www.instagram.com/rawmc.xyz/"><i class="bi bi-instagram" style="color:gray"></i></use></svg></a></li>
+            <li class="ms-3"><a class="text-body-emphasis" target="_blank" href="https://www.youtube.com/@rawmc.xyz."><i class="bi bi-youtube" style="color:gray"></i></use></svg></a></li>
         </ul>
     </footer>
 </body>
