--- a/login.html
+++ b/login.html
@@ -33,9 +33,9 @@
     <!--Cuerpo de la pagina-->
     <section>
         <!--Login-->
-        <div class="img-airport bg-image">
+        <div class="img-tunel bg-image">
             <div class="d-flex justify-content-center align-items-center">
-                <div class="col-12 col-md-8 col-lg-5 col-xl-6 my-5">
+                <div class="col-12 col-md-8 col-lg-5 col-xl-4 my-5">
                     <div class="card bg-dark text-white mt-5" style="border-radius: 1rem;">
                         <div class="card-body p-5 text-center">
                             
