--- a/shop_unlogin.html
+++ b/shop_unlogin.html
@@ -35,7 +35,7 @@
     
     <!--Cuerpo de la pagina-->
     <section>
-        <div class="img-airport bg-image">
+        <div class="img-fish bg-image">
             <div class="container row">
                 <div class="col-12 my-3 mx-5 justify-content-center">
                     <div class="col-12">
